objects/Account.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used for the DataPacks app</description>
        <label>external id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Partner_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Partner Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Opportunities_Value__c</fullName>
        <label>Open Opportunities Value</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Opportunities__c</fullName>
        <label>Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rating_Indicator__c</fullName>
        <formula>IMAGE( IF( AnnualRevenue&gt;50000000,&quot;/resource/Stars/star5.png&quot;, IF(AnnualRevenue&gt;25000000, &quot;/resource/Stars/star3.5.png&quot;,&quot;/resource/Stars/star2.png&quot;)),&quot;Rating&quot;,20,100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Type__c</fullName>
        <label>Strategic Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Top 10</fullName>
                </value>
                <value>
                    <fullName>Top 100</fullName>
                </value>
                <value>
                    <fullName>Top 1000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Rating_Indicator__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Rating_Indicator__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Company</fullName>
        <active>true</active>
        <description>A company we do business with</description>
        <label>Company</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>